NAK-938 Created APIs for EB & SBI
